--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,20 @@
 # ===============================
-# = JPA / HIBERNATE
+# = Session
 # ===============================
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=embedded
+server.servlet.session.timeout=900S
+
+# ===============================
+# = DATASOURCE / JPA / HIBERNATE
+# ===============================
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url = jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.schema=classpath:db/schema.sql
+spring.datasource.data=classpath:db/data.sql
+spring.datasource.username=sa
+spring.datasource.password=sa
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.connection.useUnicode=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
