--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 
-
-
+# ===============================
+# = SERVER
+# ===============================
+server.error.whitelabel.enabled=false
